# MLauto-agentcore

./: .gitignore  README.md  analyze_run_10.py  analyze_run_metrics.py  analyze_run_metrics_yaml.py  calculate_compute_costs.py  fetch_cw_logs.py  get_aws_bedrock_costs.py  hourly_costs_2026-06-29.json  hourly_costs_2026-07-01.json  plot_coder_invocations.py  pyproject.toml  requirements.txt  sum_coder_polling.py  writeup.txt
MLorchestrator/: .dockerignore  .gitignore  Dockerfile  __init__.py  a2a_client.py  app.py  config.yaml  deploy.sh  graph.py  logging_config.py  metrics_setup.py  nodes.py  requirements.txt  sandbox_client.py  state.py
coder_agent/: .env.example  .gitignore  Dockerfile  __init__.py  agent.py  agentcore.yaml  app.py  deploy.sh  prompts.py  requirements.txt  sandbox_client.py  state.py  utils.py
common/: logging_callback.py  metrics_context.py  metrics_emitter.py
mcpserver/: .dockerignore  .gitignore  Dockerfile  __init__.py  app.py  deploy.sh  mcp_server.py  pyproject.toml  requirements.txt
mcpserver/agentcore/: agentcore.json  aws-targets.json
mcpserver/agentcore/.llm-context/: agentcore.ts
mcpserver/agentcore/cdk/: package-lock.json
mcpserver/agentcore/cdk/test/: cdk.test.ts
mcpserver/common_local/: logging_callback.py  metrics_emitter.py
mcpserver/mocks/datasets/: pyproject.toml
mcpserver/mocks/datasets/datasets/: __init__.py
mcpserver/mocks/ir-datasets/: pyproject.toml
mcpserver/mocks/ir-datasets/ir_datasets/: __init__.py
mcts_handler/: .dockerignore  .env.example  .gitignore  Dockerfile  agentcore.yaml  app.py  deploy.sh  handler.py  (+4 more)
(+77 files in other folders)
