[project]
name = "bedrockac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Haseeb", email = "haseebbdll2@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=1.3.1",
    "bedrock-agentcore-starter-toolkit>=0.3.0",
    "boto3>=1.42.54",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langchain-openrouter>=0.2.5",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-aws>=1.0.6",
    "matplotlib>=3.10.8",
    "mcp>=1.23,<2",
    "pandas>=2.3.3",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.1",
    "traceloop-sdk>=0.52.5",
]

