[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpserver"
version = "0.1.0"
description = "Vector Store Server AgentCore Runtime"
requires-python = ">=3.10,<3.13"
dependencies = [
    "bedrock-agentcore",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "mcp>=1.27.1",
    "faiss-cpu>=1.8.0",
    "FlagEmbedding>=1.2.0",
    "ir-datasets",
    "datasets",
    "torch",
    "numpy>=1.24.0",
    "boto3>=1.34.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
ir-datasets = { path = "./mocks/ir-datasets/dist/ir_datasets-0.5.11-py3-none-any.whl" }
datasets = { path = "./mocks/datasets/dist/datasets-5.0.0-py3-none-any.whl" }
torch = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["."]
